# test-cases

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  rolldown.config.js  rspack.config.js
fixtures/: input1.js  input2.js
output/: oxc-1.js  oxc-2.js  oxc.js  swc-1.js  swc-2.js  swc.js
src/: main.rs
